Data transfer between result_diabl and form_diab

--- a/HMS/templates/form_diab.html
+++ b/HMS/templates/form_diab.html
@@ -50,7 +50,7 @@
                 <div class="logoname">MED.AI</div>
             </a>
             <div class="Patient_ID">
-                <input type="text" class="patient_id_input" placeholder="Patient Id" readonly>
+                <input type="text" class="patient_id_input" placeholder="Patient Id" name="PatientID">
             </div>
             <div class="Doctor_Name">
                 <input type="text" class="doctorNameInput" placeholder="Name Of Doctor" readonly>
@@ -86,12 +86,12 @@
                         <div>High BP</div>
                         <div class="radio-buttons">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighBP" id="Yes1" value="HighBP"
+                                <input class="form-check-input" type="radio" name="HighBP" id="Yes1" value="Yes"
                                     required>
                                 <label class="form-check-label" for="Yes1">Yes</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighBP" id="No1" value="NormalBP"
+                                <input class="form-check-input" type="radio" name="HighBP" id="No1" value="No"
                                     required>
                                 <label class="form-check-label" for="No1">No</label>
                             </div>
@@ -103,12 +103,12 @@
                         <div>High Cholestrol</div>
                         <div class="radio-buttons">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighChol" id="Yes2" value="HighChol"
+                                <input class="form-check-input" type="radio" name="HighChol" id="Yes2" value="Yes"
                                     required>
                                 <label class="form-check-label" for="Yes2">Yes</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighChol" id="No2" value="NormalChol"
+                                <input class="form-check-input" type="radio" name="HighChol" id="No2" value="No"
                                     required>
                                 <label class="form-check-label" for="No2">No</label>
                             </div>
@@ -121,12 +121,12 @@
                         <div>Stroke</div>
                         <div class="radio-buttons">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Stroke" id="Yes3" value="YesStroke"
+                                <input class="form-check-input" type="radio" name="Stroke" id="Yes3" value="Yes"
                                     required>
                                 <label class="form-check-label" for="Yes3">Yes</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Stroke" id="No3" value="NoStroke"
+                                <input class="form-check-input" type="radio" name="Stroke" id="No3" value="No"
                                     required>
                                 <label class="form-check-label" for="No3">No</label>
                             </div>
@@ -138,12 +138,12 @@
                         <div class="radio-buttons">
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="Yes4"
-                                    value="YesHeartDiseaseorAttack" required>
+                                    value="Yes" required>
                                 <label class="form-check-label" for="Yes4">Yes</label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="No4"
-                                    value="NoHeartDiseaseorAttack" required>
+                                    value="No" required>
                                 <label class="form-check-label" for="No4">No</label>
                             </div>
                         </div>
