--- a/HMS/templates/result_diab.html
+++ b/HMS/templates/result_diab.html
@@ -13,6 +13,7 @@
     
     <h2>Data</h2><br>
     <h5>
+        <input value={{PatientID}} type="text" readonly>
         PID: {{PatientID}} <br>
         DN: {{DiseaseName}} <br>
         HBP: {{HighBP}} <br>
