--- a/HMS/templates/form_diab_result.html
+++ b/HMS/templates/form_diab_result.html
@@ -31,7 +31,7 @@
                 <div class="logoname">MED.AI</div>
             </a>
             <div class="Patient_ID">
-                <input type="text" class="patient_id_input" placeholder="Patient Id" readonly>
+                <input value={{PatientID}} type="text" class="patient_id_input" placeholder="Patient Id" readonly>
             </div>
             <div class="Doctor_Name">
                 <input type="text" class="doctorNameInput" placeholder="Name Of Doctor" readonly>
