--- a/HMS/static/css/doctorhome.css
+++ b/HMS/static/css/doctorhome.css
@@ -1,58 +1,183 @@
 @font-face {
-    font-family: volko;
-    src: url(../public/mudkty-wtvolkolakgrotesque-light.ttf);
-  }
-  *{
-    font-family: Montserrat Alternates;
-    margin: 0;
-    box-sizing: border-box;
-    line-height: normal;
-  }
+  font-family: volko;
+  src: url(../public/mudkty-wtvolkolakgrotesque-light.ttf);
+}
+*{
+  margin: 0;
+  line-height: normal;
+  box-sizing: border-box;
+}
+body{
+  position: relative;
+  background-color: #EFEFEF;
+  overflow-x: hidden;
+  /* height: 2000px; */
+}
+.background1{
+  width: 38vw;
+  height: 38vw;
+  position: absolute;
+  border-radius: 19vw;
+  background: rgba(121, 162, 255, 0.60);
+  filter: blur(200px);
+  right: -8vw;
+  top: -150px;
+}
+.logo{
+  text-decoration: none;
+}
+.logoname{
+  color: #000;
+  text-align: center;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  font-family: "MADEEvolveSansEVO";
+  line-height: normal;
+}
+.header{
+  /* display: static; */
+  position: relative;
+  display:flex;
+  margin-left:6.2vw;
+  margin-right:6.2vw;
+  margin-top:48px;
+  align-items: center;
+}
 
-.ourmodels{
+.log_out{
+  display: flex;
+  position: absolute;
+  left: 10.5vw;
+  align-items: center;
+  width:10vw;
+  height: 53px;
+  border-radius: 28.5px;
+  background: #FFF;
+  margin-right:25.6vw;
+  justify-content: center;
+}
+.patient_id_input{
+  background: #FFF;
+  border:none;
+  color:black;
+  font-family: "Montserrat Alternates";
+  font-size: 20px;
+  font-weight: 400;
+  width:5.5vw;
+  height:24px;
+}
+.Doctor_Name{
+  display: flex;
+  position: absolute;
+  right: 0px;
+  align-items: center;
+  width:25vw;
+  height: 53px;
+  border-radius: 28.5px;
+  background: #FFF;
+  gap:6.28vw;
+  margin-left:29vw;
+}
+.Doctor_Name img{
+  background-color: #EFEFEF;
+  border-radius: 40%;
+}
+.doctorNameInput{
+  background: #FFF;
+  border:none;
+  color:black;
+  font-family: "Montserrat Alternates";
+  font-size: 23px;
+  font-weight: 400;
+  width:13vw;
+  height:29px;
+  margin-left:1.8vw;
+}
+
+      /* Left Part */
+      
+.Container{
+  margin-top: 5vh;
+  display: flex;
+}
+.LeftPart{
+  display:flex;
+  margin-left: 6.2vw;
+  flex-direction:column;
+  /* margin-right: 5vw; */
+}
+.Heart_Disease{
+  width:22.7vw;
+  height:190px;
+  color: #000;
+  font-family: volko;
+  font-size: 90px;
+  line-height: 100%; /* line height -> sets distance between lines of text*/
+}
+.HDisease_Prediction{
+  /* display: inline-flex; */
+  width:32.7vw;
+  height:24.5vw;
+  align-items: center;
+  flex-shrink: 0;
+  /* margin-top:2.8vw; */
+  /* margin-left:4.41vw; */
+}
+
+/* Our models */
+
+
+  .ourmodels{
     display: flex;
     flex-direction: column;
-    margin: auto;
-    margin-top: 107px;
-    width: 72.2vw;
-    height: 536px;
-  }
-  .ourmodels .head{
-    justify-content: center;
-    display: flex;
-    margin: auto;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-left:17.6vw;
     
-    height: 63px;
+  }
+
+  .head{
+    width:29.5vw;
+    display: flex;
+    flex-direction: column;
     color: #000;
-    font-family: Montserrat Alternates;
+    font-family: "Montserrat Alternates";
     font-size: 70px;
     font-weight: 500;
   }
+
+  .choose_a{
+    width:auto;
+    margin:auto;
+  }
+
+  .model{
+    width:auto;
+    margin:auto;
+  }
+ 
   .rect{
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
     font-size: 40px;
-    border-radius: 16px;
+    border-radius: 30px;
     color: #F9F9F9;
     background-color: #0067FF;
-    width: 49%;
-    height: 170px;
+    width:30.34vw;
+    height:9.22vw;
   }
   .rect20and21{
-    margin-top: 96px;
+    margin-top: 7.4vh;
     display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 170px;
     gap: 20px;
   }
   .rect22and23{
-    margin-top: 37px;
+    margin-top: 20px;
     display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 170px;
     gap: 20px;
   }
