--- a/HMS/templates/doctorhome.html
+++ b/HMS/templates/doctorhome.html
@@ -3,26 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/doctorhome.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
-    <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">    
-    <link rel="icon" href="public/favicon.ico">
-    <title>Doctor</title>
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
+    <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO"rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <link rel="icon" href="../static/public/favicon.ico">
+    <link rel="stylesheet" href="../static/css/doctorhome.css">
+    <title>Doctor home</title>
 </head>
 <body>
-    <div class="ourmodels">
-        <div class="head">Select your model</div>
-        <div class="rect20and21">
-            <a href="predictdiabetes/" class="rect">Diabetes</a>
-            <a href="predictheart/" class="rect">Heart</a>
-            
-        </div>
-        <div class="rect22and23"> 
-            <a href="" class="rect">Coming Soon</a>
-            <a href="" class="rect">Coming Soon</a>
+    <div class="header">
+        <a href="./homepage" class="logo">
+            <img src="../static/public/logo.svg" alt="">
+            <div class="logoname">MED.AI</div>
+        </a>
 
+        <div class="log_out">
+            <input type="text" class="patient_id_input" placeholder="Log Out" name="PatientID">
+        </div>
+
+        <div class="Doctor_Name">
+            <input type="text" class="doctorNameInput" placeholder="Name Of Doctor" readonly>
+            <img src="../static/public/user.svg" alt="User">
+        </div>
+
+    </div>
+
+
+    <!-- Left Part  -->
+
+    <div class="Container">
+        <div class="LeftPart">
+            <div class="Heart_Disease">
+                Doctor's Dashboard
+            </div>
+            <!-- <div class="ellipse10"> -->
+                <!-- <div class="ellipse11"> -->
+            <div class="HDisease_Prediction"><img
+                src="../static/public/My_Dashboard_Frame.svg" alt="">
+            </div>
+                <!-- </div> -->
+            <!-- </div> -->
+        </div>
+
+        <!-- Right Part -->
+        
+        <div class="ourmodels">
+            <div class="head">
+
+                <div class="choose_a">
+               Choose a 
+                </div>
+
+                <div class="model">
+                Model
+                </div>
+
+            </div>
+            
+            <div class="rect20and21">
+                <a href="predictdiabetes/" class="rect">Diabetes</a>
+                <a href="predictheart/" class="rect">Heart</a>
+            </div>
+                
+            <div class="rect22and23"> 
+                <a href="" class="rect">Coming Soon</a>
+                <a href="" class="rect">Coming Soon</a>
+            </div>
         </div>
     </div>
+    
 </body>
 </html>
