--- a/HMS/templates/signup.html
+++ b/HMS/templates/signup.html
@@ -33,10 +33,10 @@
         <div class="vertical-line"></div>
 
         <div class="you_are_a">
-            you are a
+            <div class="you">you are a</div>
             <div class="UserType">
                 <a href="./dsignup"><button class="button doctor">Doctor</button></a>
-                <a href="./psignup"> <button class="button patient">Patient</button></a>                     
+                <a href="./psignup"> <button class="button patient">Patient</button></a>      
             </div>
          </div>
     </div>
