Doctor Verification Added

--- a/HMS/templates/doctorhome.html
+++ b/HMS/templates/doctorhome.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="Doctor_Name">
-            <input type="text" class="doctorNameInput" placeholder="Name Of Doctor" readonly>
+            <input type="text" class="doctorNameInput" placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
             <img src="../static/public/user.svg" alt="User">
         </div>
 
