--- a/HMS/templates/doctorhome.html
+++ b/HMS/templates/doctorhome.html
@@ -17,9 +17,9 @@
             <div class="logoname">MED.AI</div>
         </a>
 
-        <div class="log_out">
-            <input type="text" class="patient_id_input" placeholder="Log Out" name="PatientID">
-        </div>
+        <button id="logout" type="button">
+                Log Out
+        </button>
 
         <div class="Doctor_Name">
             <input type="text" class="doctorNameInput" placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
