--- a/HMS/templates/2_patienthome.html
+++ b/HMS/templates/2_patienthome.html
@@ -16,9 +16,10 @@
             <img src="../static/public/logo.svg" alt="">
             <div class="logoname">MED.AI</div>
         </a>
-        <div class="log_out">
-            <input type="text" class="patient_id_input" placeholder="Log Out" name="PatientID">
-        </div>
+        <button id="logout" type="button">
+            Log Out
+        </button>
+
         <div class="Doctor_Name">
             <input type="text" class="doctorNameInput" placeholder="Name Of Patient" readonly>
             <img src="../static/public/user.svg" alt="User">
