--- a/HMS/templates/doctorhome.html
+++ b/HMS/templates/doctorhome.html
@@ -17,9 +17,11 @@
             <div class="logoname">MED.AI</div>
         </a>
 
+        <a href="logout">
         <button id="logout" type="button">
                 Log Out
         </button>
+        </a>
 
         <div class="Doctor_Name">
             <input type="text" class="doctorNameInput" placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
