--- a/HMS/static/css/form_diab.css
+++ b/HMS/static/css/form_diab.css
@@ -131,34 +131,15 @@ body{
     font-size: 90px;
     line-height: 100%; /* line height -> sets distance between lines of text*/
 }
-
-.ellipse10{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 32.8vw;
-    height: 32.8vw;
-    border-radius: 32.8vw;
-    background: #D9D9D9;
-    margin-top:53px;
-}
-.ellipse11{
-    height: 30vw;
-    width: 30vw;
-    border-radius: 30vw;
-    background: #FFF;
-    justify-content: center;
-    align-items: center;
-}
-
-.HDisease_Prediction>img{
-    display: inline-flex;
-    width:21.12vw;
+.HDisease_Prediction{
+    width:32.7vw;
     height:24.5vw;
     align-items: center;
     flex-shrink: 0;
-    margin-top:2.8vw;
-    margin-left:4.41vw;
+    margin-top:53px;
+}
+.HDisease_Prediction img{
+    width: 100%;
 }
 
 
@@ -225,14 +206,15 @@ body{
 
 .grid-item div{
     text-align: center;
-    word-break: break-all;
+    word-break: normal;
+    white-space: wrap;
 }
 .grid-item .input2{
     text-align: center;
     display: flex;
     position: absolute;
     bottom: 40px;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 600;
     width: 8.8vw;
     height: 43px;
@@ -240,6 +222,10 @@ body{
     border-radius: 15px;
     background: #FFF;
     border:none;
+}
+.grid-item .input2::placeholder{
+    font-size: 20px;
+    color: #bab6b6;
 }
 .grid-item .dropdown{
     width: 8.8vw;
