--- a/HMS/templates/form_diab.html
+++ b/HMS/templates/form_diab.html
@@ -46,7 +46,7 @@
                 <div class="logoname">MED.AI</div>
             </a>
             <div class="Patient_ID">
-                <input type="text" class="patient_id_input" placeholder="Patient Id" name="PatientID">
+                <input type="text" class="patient_id_input" placeholder="Patient Id" name="PatientID" required>
             </div>
             <div class="Doctor_Name">
                 <input type="text" class="doctorNameInput" placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
