javascript added for form_heart page

--- a/HMS/templates/form_heart.html
+++ b/HMS/templates/form_heart.html
@@ -140,7 +140,7 @@
         </div>
     </form>
 
-    <script src="../static/js/form_diab.js"></script>
+    <script src="../static/js/form_heart.js"></script>
 
     
 </body>
