--- a/HMS/templates/doctorhome.html
+++ b/HMS/templates/doctorhome.html
@@ -40,11 +40,14 @@
             </div>
             <!-- <div class="ellipse10"> -->
                 <!-- <div class="ellipse11"> -->
-            <div class="HDisease_Prediction"><img
-                src="../static/public/My_Dashboard_Frame.svg" alt="">
+            <div class="HDisease_Prediction">
+                <img src="../static/public/My_Dashboard_Frame.svg" alt="">
             </div>
                 <!-- </div> -->
             <!-- </div> -->
+            <button id="my_patients" type="button">
+                My Patients
+            </button>
         </div>
 
         <!-- Right Part -->
