--- a/HMS/static/css/form_diab.css
+++ b/HMS/static/css/form_diab.css
@@ -295,13 +295,27 @@ body{
     height:132px;
 }
 
-.Box1 input{
+.predict_result{
     width: 16.8vw;
     height:132px ;
     flex-shrink: 0;
     border-radius: 20px;
     background: #FFF;
     border:none;
+    font-family: "Montserrat Alternates";
+    font-size: 21px;
+    font-weight: 500;
+    text-align: center;
+    display: flex;
+    font-size: 20px;
+    font-weight: 600;
+    display: flex;
+    
+}
+
+.resulttext {
+    margin-top: 30px;
+    /* vertical-align: middle; */
 }
 
 .Box1{
