applied css file to result_diab.html and css file name changes

--- a/HMS/templates/form_heart_result.html
+++ b/HMS/templates/form_heart_result.html
@@ -12,7 +12,7 @@
         rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" href="../static/public/favicon.ico">
-    <link rel="stylesheet" href="../static/css/form_diab.css">
+    <link rel="stylesheet" href="../static/css/form_and_prediction.css">
     <title>Diabetes Prediction</title>
 </head>
 
