--- a/HMS/templates/result_diab.html
+++ b/HMS/templates/result_diab.html
@@ -3,13 +3,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet" >
-    <link rel="icon" src="../static/public/favicon.ico">
-    <link rel="stylesheet" src="../static/css/form_diab.css">
+    <link rel="stylesheet" href="../static/css/form_and_prediction.css">
+
+    <!-- icon not working due to "{% load static %}" -->
+    <link rel="icon" href="../static/public/favicon.ico">
+
     <title>Status</title>
 </head>
 <body>
@@ -86,7 +89,7 @@
                 <div class="ellipse10">
                     <div class="ellipse11">
                         <div class="HDisease_Prediction"><img
-                            src="../static/public/FrameDiabetes.svg" alt=""></div>
+                            src="../static/public/DiabetesFrame.svg" alt=""></div>
                     </div>
                 </div>
             </div>
