--- a/HMS/templates/result_diab.html
+++ b/HMS/templates/result_diab.html
@@ -41,8 +41,8 @@
     <form action="venue_pdf" method="POST">
         {% csrf_token %}
 
-
-
+        <input type="text" name="DiseaseName"  id="" value={{DiseaseName}}  style="display: none;">
+        <input type="number" name="Prediction" id="" value={{data}} style="display: none;">
         <!-- DoctorName<input type="text" name="DoctorName" id="" value="{{DoctorProfile.first_name}} {{DoctorProfile.last_name}}" readonly>
         PID<input type="text" name="PatientID"  id="" value={{PatientID}}  readonly>
         Disease<input type="text" name="DiseaseName"  id="" value={{DiseaseName}}  readonly>
@@ -161,7 +161,7 @@
                     <div class="Prediction2">
                         <div class="Box1">
                             <div class="GIF">
-                                <img src="https://www.figma.com/file/hN3Ifs6FNCKexSSf0pMOda/image/d009a3c45532e0fbd721c2c10814be70e208f5a8"
+                                <img src="../static/public/diabetesgif.gif"
                                     alt="PredictionImage">
                             </div>
                             <div class="predict_result">
