Report Model changed

--- a/HMS/templates/doctorhome.html
+++ b/HMS/templates/doctorhome.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="./homepage" class="logo">
+        <a href="doctorhome" class="logo">
             <img src="../static/public/logo.svg" alt="">
             <div class="logoname">MED.AI</div>
         </a>
